[package]
name = "http_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "sqlite"] }
uuid = {version = "1.2", features = ["v4", "fast-rng","macro-diagnostics"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"